[package]
name = "client"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protocol = { path = "../protocol" }
rand = "0.8.5"
rustyline = { version = "15.0.0", default-features = false }
serde = { version = "1.0.215", features = ["derive"] }
toml = "0.8.19"
