[package]
name = "client"
version = "0.4.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protocol = { path = "../protocol" }
toml-config = { path = "../toml-config" }
thread-pool = { path = "../thread-pool" }
rand = "0.8.5"
rustyline = { version = "15.0.0", default-features = false }
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "2.0.6"
