[package]
name = "server-node"
version = "0.9.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ciborium = "0.2.2"
serde = { version = "1.0.215", features = ["derive"] }
terminal_size = "0.4.1"
protocol = { path = "../protocol" }
thread-pool = { path = "../thread-pool" }
toml-config = { path = "../toml-config" }
thiserror = "2.0.6"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(coverage,coverage_nightly)',
] }
